This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0

Any uppercase BUG_* names are modernish shell bug IDs.

2022-06-08:

- If -B/--braceexpand is turned on in --posix mode, it now only allows brace
  expansion on literal strings and not on the values of unquoted expansions.
  This behaviour is like bash and zsh, as well as compliant with a future
  version of the POSIX standard that may specify brace expansion:
  https://www.austingroupbugs.net/view.php?id=1193

2022-06-07:

- Fixed a bug in 'typeset' where compound variables could acquire a spurious
  -x (export) attribute when printing their values, triggering other bugs.

2022-06-05:

- Fixed a bug where tab completion would spuriously execute a command
  substitution after entering: '`something<TAB> or generate a spurious
  'end of file unexpected' syntax error after entering: '$(something<TAB>.

- Fixed bug where tab completion stopped working for arguments following a
  quoted string with an escaped backslash in the form $'foo\'bar'.

2022-06-04:

- Added a new --functrace long-form shell option which causes the -x/--xtrace
  option's state and the DEBUG trap action to be inherited by function scopes
  instead of being reset to default. Changes made to them within a function
  scope still do not propagate back to the parent scope. Similarly, this
  option also causes the DEBUG trap action to be inherited by subshells.

2022-06-03:

- Fixed a couple of bugs that caused floating point variables imported from
  a parent ksh through the environment to be corrupted.

- Fixed a bug where invocation-local assignments preceding a built-in or
  external command or function call did not honour their pre-existing
  attributes set by typeset (such as -i or -F) in certain cases.

2022-06-01:

- New 'typeset' feature inspired by bash (and zsh and mksh): the -g flag